<resources>
    <string name="app_name">Gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text">Вход</string>
    <string name="network_error">Не удалось загрузить ленту \nОбновите экран или попробуйте позже</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="my_liked">Мои избранные</string>
    <string name="profile">Профиль</string>
    <string name="liked">Избранное</string>
    <string name="main">Главная</string>
    <string name="gallery">Галерея</string>
    <string name="city">Город</string>
    <string name="phone">Телефон</string>
    <string name="mail">Почта</string>
</resources>