<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".performance.fragment.LoginFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="38dp"
        android:textAppearance="@style/Text.SemiBold.24"
        android:text="@string/login_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/login"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        style="@style/DefaultTextLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="phone"
            style="@style/DefaultInputText"
            />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/ic_password_selector"
        style="@style/DefaultTextLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            style="@style/DefaultInputText"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:src="@drawable/ic_surf_edu_background"

        />

    <ru.surf.vorobev.gallery.performance.ProgressButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="648dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:textBtn="@string/login_text"
        app:isLoading="false"
        />

</FrameLayout>